<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/firstLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/executionTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="100sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:text="@string/calculated_time"
            android:textColor="@color/colorAccent"
            />
        <TextView
            android:id="@+id/seconds_char"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_for_seconds"
            android:textSize="60sp"
            android:textColor="@color/grey"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstLinearLayout"
        android:padding="10dp"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/array_size_edittext"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/array_size_hint"
            android:inputType="number"
            android:textSize="15sp"
            android:layout_marginStart="15dp"
            android:autofillHints="no"
            tools:ignore="UnusedAttribute" />
        <Button
            android:id="@+id/populate_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/populate_btn_text"
            android:textSize="13sp"
            android:layout_marginStart="15dp"
            android:onClick="populateArray"
            android:textColor="@android:color/white"
            android:background="@drawable/button_styling"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/secondLinearLayout"
        android:padding="20dp"
        android:orientation="vertical"
        >
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:entries="@array/algorithm_names"
            />

        <Button
            android:id="@+id/calculate_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_styling"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/calculate_btn"
            android:onClick="calculateExecutionTime"
            />
        <Button
            android:id="@+id/display_array_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_styling"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text="@string/display_array_btn"
            android:onClick="displayArray"
            />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh_black_24dp"
            android:tint="@android:color/white"
            android:background="@color/colorAccent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="refreshData"
            />

    </LinearLayout>

</RelativeLayout>